# lahu-c-

./: .gitignore  INSTALL.md  README.md  REPORT.md  USAGE.md
backend/: CMakeLists.txt  README.md  app.py  donation_requests.csv  donors.csv  requirements.txt  users.csv
backend/app/: main.py
backend/app/api/: auth.py  donations.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: donation.py  user.py
backend/app/schemas/: donation.py  user.py
backend/scripts/: create_test_user.py  seed_data.py
backend/src/: server.cpp
blood_donation_system/: CMakeLists.txt  README.md
blood_donation_system/cpp_core/: blood_logic.cpp  blood_logic.h  main.cpp
blood_donation_system/python_app/: app.py  requirements.txt
blood_donation_system/python_app/static/: index.html
frontend/: README.md  index.html  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/: route.ts
frontend/app/api/donors/: route.ts
frontend/app/components/: LoginForm.tsx  ProtectedRoute.tsx
frontend/app/dashboard/: page.tsx
frontend/app/donations/: page.tsx
frontend/app/lib/: api.ts
frontend/app/profile/: page.tsx
frontend/app/search/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: blood-compatibility-checker.tsx
frontend/components/ui/: search-bar.tsx
frontend/hooks/: use-auth.ts  use-blood-donation.ts  use-donors.ts
frontend/lib/: actions.ts  api.ts  auth.ts  database.ts  types.ts
frontend/lib/services/: blood-donation.ts
(+2 files in other folders)
